--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,13 +1,13 @@
-beautifulsoup4==4.9.3
-django-constance==2.8.0
-django-picklefield==3.0.1
-django-rest-framework==0.1.0
-djangorestframework-simplejwt==5.1.0
-django==3.2.16
+beautifulsoup4==4.12.2
+django-constance==2.9.1
+django-picklefield==3.1
+django-rest-framework~=0.1.0
+djangorestframework-simplejwt==5.2.2
+django==3.2.19
 faker==6.5.0
 gunicorn==20.1.0
-nltk==3.6.7
-pandas==1.2.3
-pdfplumber==0.6.0
-python-docx==0.8.10
-scikit-learn==1.0.2
+nltk==3.8.1
+pandas==2.0.2
+pdfplumber==0.9.0
+python-docx==0.8.11
+scikit-learn==1.2.2
